--- a/package.json
+++ b/package.json
@@ -1,35 +1,59 @@
 {
-  "name": "my-project",
-  "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sanity-start": "sanity start"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@sanity/client": "^3.4.1",
+    "@next/font": "13.0.2",
     "@sanity/image-url": "^1.0.1",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@sanity/webhook": "^2.0.0",
+    "@tailwindcss/typography": "0.5.7",
+    "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "next-sanity": "^3.1.8",
+    "date-fns": "2.29.3",
+    "googleapis": "48.0.0",
+    "motion": "^10.14.3",
+    "next": "13.0.2",
+    "next-auth": "4.15.1",
+    "next-mdx-remote": "^4.1.0",
+    "next-sanity": "^1.0.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4",
+    "sanity": "dev-preview",
+    "sanity-plugin-markdown": "^3.0.0-v3-studio.0",
+    "styled-components": "^5.3.6",
+    "swr": "1.3.0",
+    "tailwindcss": "3.2.1",
     "use-delayed-render": "^0.0.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "@types/react": "^18.0.24",
+    "autoprefixer": "10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.2",
+    "globby": "13.1.2",
+    "postcss": "^8.4.18",
+    "prettier": "2.7.1",
+    "reading-time": "^1.5.0",
+    "rehype": "12.0.1",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-code-titles": "1.1.0",
+    "rehype-prism-plus": "^1.5.0",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "^3.0.1",
+    "rss": "1.2.2",
+    "typescript": "^4.8.4"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
